basic loader by means of load.js, some html structuring

--- a/index.html
+++ b/index.html
@@ -11,14 +11,41 @@
   </head>
 
   <body>
+    <header>
+        <hgroup>
+            <h1>Not much is happening</h1>
+            <h2>working on the loader in main.js</h2>
+        </hgroup>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <header>
+                <h1>Article</h1>
+            </header>
+            <section>
+                Bro tip: Use <code>sudo python -m SimpleHTTPServer 80</code> in the root to fire up a webserver instance.
+            </section>
+        </article>
+        <article>
+            <header>
+                <h1>Article</h1>
+            </header>
+            <section>
+                The Content
+            </section>
+        </article>
+    </section>
+    <footer>Footer</footer>
 
-    Get busy.
 
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.5.0/backbone-min.js"></script>
-
+    <script src="/js/load.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
